--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
-# Backend core
+asgiref==3.11.0
+black==23.12.1
+click==8.1.8
 Django==4.2.27
+django-cors-headers==4.3.1
+django-environ==0.11.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
-
-# Environment variables
-django-environ==0.11.2
-
-# CORS
-django-cors-headers==4.3.1
-
-# Testing
+exceptiongroup==1.3.1
+flake8==7.0.0
+iniconfig==2.1.0
+isort==5.13.2
+mccabe==0.7.0
+mypy_extensions==1.1.0
+packaging==25.0
+pathspec==1.0.3
+platformdirs==4.4.0
+pluggy==1.6.0
+pycodestyle==2.11.1
+pyflakes==3.2.0
+PyJWT==2.10.1
 pytest==7.4.3
 pytest-django==4.7.0
-
-# Code quality
-black==23.12.1
-isort==5.13.2
-flake8==7.0.0
+pytz==2025.2
+sqlparse==0.5.5
+tomli==2.4.0
+typing_extensions==4.15.0
+uuid6==2025.0.1
