--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ htmlcov/
 *.pyo
 scripts/devnote-notes-postman-collection.json
 scripts/devnote-auth-projects-postman-collection.json
+scripts/DevNote_Complete.postman_collection.json
