--- a/.gitignore
+++ b/.gitignore
@@ -37,9 +37,7 @@ htmlcov/
 # Deployment
 *.pyc
 *.pyo
-scripts/devnote-notes-postman-collection.json
-scripts/devnote-auth-projects-postman-collection.json
-scripts/DevNote_Complete.postman_collection.json
+backend/scripts/
 
 # Logs
 logs/
