--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
-    "axios": "^1.13.5"
+    "axios": "^1.13.5",
+    "dompurify": "^3.3.1",
+    "marked": "^17.0.2"
   }
 }
