--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.13.5",
     "dompurify": "^3.3.1",
-    "marked": "^17.0.2"
+    "marked": "^17.0.2",
+    "mermaid": "^11.12.2"
   }
 }
